# formal-lib

./: .gitignore  CLA.md  CLAUDE.md  LICENSE  README.md  pyproject.toml
.github/actions/changelog/: action.yml
.github/actions/setup-hatch/: action.yml
.github/workflows/: ci.yml  cla.yml  release.yml  test.yml  weekly-prerelease.yml
formal_lib/: __about__.py  __init__.py  __main__.py  issue.py  issue_parser.py  logging.py  regex.py  verifier_output.py  verifier_runner.py  version.py
formal_lib/specs/: __init__.py  base.py  cbmc.py  clang.py  conflicts.py  esbmc.py  kani.py  pytest.py
tests/: test_version.py
tests/regressions/: test_sample_regression.py
tests/regressions/samples/cbmc/esbmc/: 00_bitshift_01.json  fam_false_0.json  github_1175_10.json  github_1890_1.json  overflow_01_addition.json
tests/regressions/samples/cbmc/v6.7.1/esbmc/: 00_bitshift_01.json  fam_false_0.json  github_1890_1.json  overflow_01_addition.json
tests/regressions/samples/clang/: undeclared_error.json  unused_variable_warning.json
tests/regressions/samples/esbmc/: linux-kernel_from_user_copy_invalid.json
tests/regressions/samples/esbmc/esbmc-cpp/unordered_map/: basic_insert2_fail.json
tests/regressions/samples/esbmc/linux/: kernel_from_user_copy_invalid.json
tests/regressions/samples/esbmc/v8.2.0/contracts/: copy_mem_same_object_no_stacktrace.json  strlen_enforce_array_bounds.json
tests/regressions/samples/kani/: arith_overflow.json  assert_eq.json  cast_success.json  division_by_zero.json  multiple_asserts.json  pointer_offset_overflow.json  slice_from_raw.json  slice_out_of_bounds.json  unreachable.json
tests/regressions/samples/kani/v0.67.0/: float_nan.json  multiple_asserts.json  native_format_no_trace.json  unreachable.json
tests/regressions/samples/pytest/v8.4.2/: multiple.json  multiple_collection_error.json
tests/test_specs/: test_kani_spec.py  test_location_features.py  test_pytest_spec.py  test_verdict.py
