[project]
name = "formal-lib"
description = "Contains a formalization of different software verifiers"
readme = "README.md"
requires-python = ">=3.12"
license = "AGPL-3.0-only AND LicenseRef-Commercial"
license-files = ["LICENSE"]
authors = [
  { name = "Yiannis Charalambous", email = "yiannis128@hotmail.com" },
]
keywords = []
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = ["platformdirs", "pydantic"]
dynamic = ["version"]

[project.urls]
Documentation = "https://github.com/Yiannis Charalambous/formal-lib#readme"
Issues = "https://github.com/Yiannis Charalambous/formal-lib/issues"
Source = "https://github.com/Yiannis Charalambous/formal-lib"

[project.scripts]
pf = "formal_lib.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.coverage.run]
source_pkgs = ["formal_lib", "tests"]
branch = true
parallel = true
omit = [
  "formal_lib/__about__.py",
]

[tool.coverage.paths]
formal_lib = ["formal_lib"]
tests = ["tests", "*/formal-lib/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]

[tool.hatch.version]
path = "formal_lib/__about__.py"

[tool.pytest.ini_options]
markers = ["regression: data-driven sample regression tests"]
addopts = "-m 'not regression'"

[tool.hatch.envs.regression]
extra-dependencies = ["pytest"]

[tool.hatch.envs.regression.scripts]
test = "pytest -m regression -o 'addopts=' {args}"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]

[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:formal_lib tests}"
